--- a/infra/k8s/geetogether-auth-mongo-depl.yaml
+++ b/infra/k8s/geetogether-auth-mongo-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: geetogether-auth-mongo
-          image: mongo #mongo官方image, 可以在dockhub查尋mongo查看image詳情
+          image: mongo #mongo官方image, 可以在dockhub查尋mongo查看image詳情.
 ---
 apiVersion: v1
 kind: Service
