--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -15,11 +15,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' # 從 GitHub 機密中提取 GCP 服務帳戶的 JSON 金鑰
+
     - name: Setup Google Cloud SDK
       uses: 'google-github-actions/setup-gcloud@v1'
-      with:
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }} # 從 GitHub 機密中提取 GCP 服務帳戶的 JSON 金鑰
-        project_id: 'geetogether-gcproj'
 
     - name: Configure kubectl context
       run: gcloud container clusters get-credentials geetogether-cluster --zone asia-east1 --project geetogether-gcproj #你的-gke-叢集名稱 --zone 你的-gke-區域 --project 你的-gcp-專案-id
