--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -16,14 +16,14 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
+      uses: google-github-actions/setup-gcloud@v0.2.0
       with:
         service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         project_id: 'geetogether-gcproj'
         export_default_credentials: true
 
     - name: Configure kubectl context
-      run: gcloud container clusters get-credentials geetogether-cluster --zone asia-east1 --project geetogether-gcproj #你的-gke-叢集名稱 --zone 你的-gke-區域 --project 你的-gcp-專案-id
+      run: gcloud container clusters get-credentials geetogether-cluster --zone asia-east1 --project geetogether-gcproj
 
     - name: Deploy to GKE
       run: |
