--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -16,9 +16,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
       with:
-        version: '290.0.1'
         service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         project_id: 'geetogether-gcproj'
 
