--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
       with:
         service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         project_id: 'geetogether-gcproj'
