--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -24,6 +24,9 @@ jobs:
     # Install gcloud, `setup-gcloud` automatically picks up authentication from `auth`.
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
+      with:
+        project_id: 'geetogether-gcproj'
+        export_default_credentials: true
 
     - name: Configure kubectl context
       run: gcloud container clusters get-credentials geetogether-cluster --zone asia-east1 --project geetogether-gcproj
