--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -16,20 +16,26 @@ jobs:
       uses: actions/checkout@v3
 
     - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v1'
+      uses: 'google-github-actions/auth@v0'
       with:
         credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}'
 
-    # Install gcloud, `setup-gcloud` automatically picks up authentication from `auth`.
-    - name: 'Set up Cloud SDK'
-      uses: 'google-github-actions/setup-gcloud@v1'
+    # Get the GKE credentials so we can deploy to the cluster
+    - name: Set up GKE credentials
+      uses: google-github-actions/get-gke-credentials@v0
       with:
-        project_id: 'geetogether-gcproj'
-        export_default_credentials: true
+        cluster_name: 'geetogether-cluster'
+        location: 'asia-east1'
 
-    - name: Configure kubectl context
-      run: gcloud container clusters get-credentials geetogether-cluster --zone asia-east1 --project geetogether-gcproj
+    # Install gcloud, `setup-gcloud` automatically picks up authentication from `auth`.
+    # - name: 'Set up Cloud SDK'
+    #   uses: 'google-github-actions/setup-gcloud@v1'
+    #   with:
+    #     project_id: 'geetogether-gcproj'
+    #     export_default_credentials: true
+
+   # - name: Configure kubectl context
+   #   run: gcloud container clusters get-credentials geetogether-cluster --zone asia-east1 --project geetogether-gcproj
 
     - name: Deploy to GKE
       run: |
