--- a/.github/workflows/build-deploy-auth.yml
+++ b/.github/workflows/build-deploy-auth.yml
@@ -20,6 +20,31 @@ jobs:
       - name: Build TypeScript
         run: npm run build
 
+      - name: Build the Docker image
+        run: | 
+          cd auth
+          docker build -t 594leonhuang/geetogether-auth:${{ github.sha }} -f Dockerfile.prod .
+          
+      - name: Push the Docker image
+        run: | 
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push 594leonhuang/geetogether-auth:${{ github.sha }}
+
+      - name: Auth to GKE
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}'
+
+       # Get the GKE credentials so we can deploy to the cluster
+      - name: Set up GKE credentials
+        uses: google-github-actions/get-gke-credentials@v0
+        with:
+          cluster_name: 'geetogether-cluster'
+          location: 'asia-east1'
+          
+      - name: Deploy to GKE
+        run: kubectl rollout restart deployment geetogether-auth-depl
+
       
 
 
