--- a/infra/k8s-prod/geetogether-ingress-srv.yaml
+++ b/infra/k8s-prod/geetogether-ingress-srv.yaml
@@ -3,9 +3,9 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
+  ingressClassName: nginx # 設置 Ingress Class 的名稱
   rules:
     - http:
         paths:
@@ -58,8 +58,7 @@ spec:
                 name: geetogether-timelines-srv
                 port:
                   number: 3000
-          - path: /?(.*)
-            pathType: Prefix
+          - path: /
             backend:
               service:
                 name: geetogether-client-srv
