--- a/.github/workflows/build-deploy-auth.yml
+++ b/.github/workflows/build-deploy-auth.yml
@@ -17,14 +17,15 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd auth
+          npm install
 
       - name: Build TypeScript
         run: npm run build
 
       - name: Build the Docker image
         run: | 
-          cd auth
           docker build -t 594leonhuang/geetogether-auth:${{ github.sha }} -f Dockerfile.prod .
           
       - name: Push the Docker image
