--- a/infra/k8s-prod/geetogether-ingress-srv.yaml
+++ b/infra/k8s-prod/geetogether-ingress-srv.yaml
@@ -58,7 +58,7 @@ spec:
                 name: geetogether-timelines-srv
                 port:
                   number: 3000
-          - path: /?(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
